--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.9.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
             <version>1.18.0</version>
@@ -40,6 +46,7 @@
             <version>1.18.0</version>
             <scope>test</scope>
         </dependency>
+
 
         <dependency>
             <groupId>org.assertj</groupId>
